[TASK] Fix border color contrast of form inputs
Related: #1318

--- a/Resources/Public/Scss/bootstrap5/_variables.scss
+++ b/Resources/Public/Scss/bootstrap5/_variables.scss
@@ -129,3 +129,7 @@ $accordion-padding-y:               1rem !default;
 $accordion-padding-x:               1.25rem !default;
 $accordion-body-padding-y:          $accordion-padding-x !default;
 $accordion-body-padding-x:          $accordion-padding-x !default;
+
+// Components
+//
+$border-color:                      $gray-600 !default;
