--- a/Resources/Public/Scss/bootstrap5/compat/_form.scss
+++ b/Resources/Public/Scss/bootstrap5/compat/_form.scss
@@ -36,7 +36,6 @@ fieldset.form-group {
     color: #212529;
     background-color: #ffffff;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -51,6 +50,17 @@ fieldset.form-group {
 }
 .radio {
     @extend .form-check;
+}
+
+// FE Login
+
+// added for compliance with color contrast of border-radius
+// should be improved when fe_login fluid templates implemented globally
+.frame-type-felogin_login {
+    input[type="text"],
+    input[type="password"] {
+        @extend .form-control;
+    }
 }
 
 //
